// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup rendering with defaults should render correctly 1`] = `
<ul
  className="radio-group"
/>
`;

exports[`RadioGroup rendering with props should render correctly 1`] = `
<ul
  className="radio-group"
>
  <li
    className="radio-group__li"
    key="FILTER1"
  >
    <Radio
      checked={false}
      label="Filter 1"
      onChange={[MockFunction]}
      onClick={[MockFunction]}
      value="FILTER1"
    />
  </li>
  <li
    className="radio-group__li"
    key="FILTER2"
  >
    <Radio
      checked={false}
      label="Filter 2"
      onChange={[MockFunction]}
      onClick={[MockFunction]}
      value="FILTER2"
    />
  </li>
</ul>
`;

exports[`RadioGroup rendering with props should render correctly with row passed in 1`] = `
<ul
  className="radio-group radio-group--row"
>
  <li
    className="radio-group__li"
    key="FILTER1"
  >
    <Radio
      checked={false}
      label="Filter 1"
      onChange={[MockFunction]}
      onClick={[MockFunction]}
      value="FILTER1"
    />
  </li>
  <li
    className="radio-group__li"
    key="FILTER2"
  >
    <Radio
      checked={false}
      label="Filter 2"
      onChange={[MockFunction]}
      onClick={[MockFunction]}
      value="FILTER2"
    />
  </li>
</ul>
`;
